--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">EcoMap</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="app_name">Эко-карта Смоленска</string>
+    <string name="title_activity_maps">Эко-карта Смоленска</string>
     <string name="title_activity_help"><b>Как сортировать мусор?</b></string>
     <string name="title_paper"><b>Бумага</b></string>
     <string name="suitable_paper"><b>Подходит:</b> утрамбованные картон, офисная бумага, газетно-журнальная продукция, тетради, альбомы, открытки, любая бумажная упаковка и т.д.</string>
