--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,13 @@
     <string name="unsuitable_glass"><b>Не подходит:</b> жаростойкое и ударопрочное стекло.</string>
     <string name="title_danger"><b>Опасные отходы</b></string>
     <string name="suitable_danger"><b>Подходит:</b> батарейки и другие отходы, помеченные как опасные.</string>
+    <string name="title_activity_weather">WeatherActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
